--- a/demo/app/demos/layer/demo.component.html
+++ b/demo/app/demos/layer/demo.component.html
@@ -10,7 +10,9 @@
       <h3 class="vclPanelTitle">
         Layer
       </h3>
-      <button vcl-icon-button icon="fas:times" class="vclTransparent" (click)="layer.close()"></button>
+      <button vcl-square-button class="vclTransparent" (click)="layer.close()">
+        <vcl-icon icon="fas:times"></vcl-icon>
+      </button>
     </div>
     <div class="vclPanelBody">
       <p class="vclPanelContent">
