--- a/demo/app/demos/layer/foo.component.html
+++ b/demo/app/demos/layer/foo.component.html
@@ -1,7 +1,9 @@
 <div class="vclPanel vclPanelDialog vclNoMargin">
   <div class="vclPanelHeader vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
     <h3 class="vclPanelTitle">{{title}}</h3>
-    <button vcl-icon-button icon="fas:times" class="vclTransparent" (click)="close()"></button>
+    <button vcl-square-button class="vclTransparent" (click)="close()">
+      <vcl-icon icon="fas:times"></vcl-icon>
+    </button>
   </div>
   <div class="vclPanelBody">
     <p class="vclPanelContent">
