datepicker: add icon resolver support

--- a/lib/ng-vcl/src/date-picker/date-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/date-picker.component.html
@@ -3,18 +3,14 @@
     <div class="vclDGRow">
       <div class="vclDGCell vclToolbar">
         <div class="vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
-          <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="prevMonth()">
-                <div class="vclIcogram">
-                  <div class="vclIcon fas fa-angle-left" aria-hidden="false" aria-label="previous" role="img"></div>
-                </div>
-              </button>
+          <button vcl-square-button type="button" class="vclTransparent" [disabled]="disabled" (click)="prevMonth()" aria-label="previous">
+            <vcl-icon icon="vcl:arrow-left"></vcl-icon>
+          </button>              
           <span class="vclCalHeaderLabel" (click)="showYear()" [class.date-picker-pointer]="!showYearPick">
             {{ viewDate?.getMonthString() }}&nbsp;&nbsp;{{ viewDate?.getYearString() }}
           </span>
-            <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="nextMonth()">
-              <div class="vclIcogram">
-                <div class="vclIcon fas fa-angle-right" aria-hidden="false" aria-label="next" role="img"></div>
-              </div>
+            <button vcl-square-button type="button" class="vclTransparent" [disabled]="disabled" (click)="nextMonth()" aria-label="next">
+              <vcl-icon icon="vcl:arrow-right"></vcl-icon>
             </button>
           </div>
         </div>
