password-input: upgrade + icon resolver support

--- a/lib/ng-vcl/src/password-input/password-input.component.html
+++ b/lib/ng-vcl/src/password-input/password-input.component.html
@@ -1,6 +1,6 @@
 <ng-content></ng-content>
-<button vcl-icon-button
-        [icon]="buttonIcon" 
+<button vcl-square-button
         [disabled]="disabled"
         (click)="toggle()">
+  <vcl-icon [icon]="visible ? 'vcl:eye' : 'vcl:eye-off'"></vcl-icon>
 </button>
