--- a/demo/app/demos/password-input/demo.component.html
+++ b/demo/app/demos/password-input/demo.component.html
@@ -1,11 +1,11 @@
 <h3>Password input</h3>
 <vcl-password-input>
-  <input vcl-input vcl-password-input [(ngModel)]="password" placeholder="Enter password">
+  <input vclInput [(value)]="password" placeholder="Enter password">
 </vcl-password-input>
 <br>
 <b>Password input value:</b> {{password}}
 
 <h3>Password input (disabled)</h3>
-<vcl-password-input [disabled]="true">
-  <input vcl-input vcl-password-input placeholder="Enter password">
+<vcl-password-input>
+  <input vclInput [disabled]="true" placeholder="Enter password">
 </vcl-password-input> 
