--- a/demo/app/demos/month-picker/demo.component.html
+++ b/demo/app/demos/month-picker/demo.component.html
@@ -8,45 +8,20 @@
 </vcl-month-picker>
 <br><br>
 
-<h3>Demo with a button which creates a popover with a month picker</h3>
-<button vcl-button
-  #target
-  label="Expand"
-  (click)="expandMonthPicker()">
-</button>
-
-<vcl-popover #mp [target]="target" targetAttachment='bottom right' attachment='top right' [visible]="expanded" class="vclNoPadding">
-  <vcl-month-picker
-    [expandable]="true"
-    [(expanded)]="expanded"
-    [(currentYear)]="currentYear"
-    [monthsPerRow]="4"
-    (select)="onSelect($event)"
-    (prevYearBtnTap)="onPreviousYearTap()"
-    [prevYearAvailable]="prevYearAvailable"
-    (nextYearBtnTap)="onNextYearTap()"
-    [nextYearAvailable]="nextYearAvailable"
-  >
-  </vcl-month-picker>
-</vcl-popover>
-<br><br>
-<br><br>
-
 <h3>Demo with set range for selectable months</h3>
-<vcl-month-picker
-                  [locales]="locales"
+<vcl-month-picker [locales]="locales"
                   [dateOptions]="dateOptions"
                   [prevYearAvailable]="true"
                   [nextYearAvailable]="true"
                   [min]="min"
                   [max]="max"
+                  [expandable]="true"
 >
 </vcl-month-picker>
 <br><br>
 
 <h3>Demo with two way data binding</h3>
-<vcl-month-picker
-                  [prevYearAvailable]="true"
+<vcl-month-picker [prevYearAvailable]="true"
                   [nextYearAvailable]="true"
                   [(ngModel)]="selectedMonth"
 >
@@ -56,6 +31,5 @@
 {{selectedMonth.toDateString()}}
 
 <button vcl-button
-        label="Change Month"
-        (click)="btn()">
+        (click)="btn()">Change Month
 </button>
