Misc updates and fixes

--- a/demo/app/demos/gallery/demo.component.html
+++ b/demo/app/demos/gallery/demo.component.html
@@ -30,7 +30,7 @@
 </vcl-gallery>
 <br><br>
 
-<h2>Gallery by components</h2>
+<h2>Gallery components seperated</h2>
 
 <vcl-gallery #external [selectedImage]="1">
   <vcl-gallery-image image="https://picsum.photos/600/500?image=430" thumbnail="https://picsum.photos/200/200?image=430" alt="Image 1"></vcl-gallery-image>
