--- a/lib/ng-vcl/src/navigation/navigation.component.html
+++ b/lib/ng-vcl/src/navigation/navigation.component.html
@@ -1,37 +1,1 @@
-<ul [class.vclLayoutHorizontal]="type === 'horizontal'">
-  <li *ngFor="let item of navigationItems"
-      [class.vclSelected]="(item.showActive || item.selectable) && item.selected"
-      [class.vclOpen]="item.opened"
-      [class.vclClose]="!item.opened"
-      [class.vclNavigationHeading]="item.heading"
-      [class.vclNavigationItem]="!item.heading"
-      [attr.aria-selected]="item.selectable && item.selected"
-      [attr.role]="item.heading && 'sectionhead' || ariaRole"
-      [attr.tabindex]="tabindex"
-      [ngClass]="item.class"
-      (mouseleave)="mouseLeave(item)"
-      (mouseover)="mouseOver(item)">
-
-      <span *ngIf="item.heading">
-        {{item.label}}
-      </span>
-
-      <a vcl-icogram class="vclNavigationItemLabel"
-        *ngIf="!item.heading"
-        (click)="selectItem(item)"
-        [prepIcon]="item.calcPrepIcon"
-        [appIcon]="item.calcAppIcon"
-        >{{item.label}}
-      </a>
-
-    <nav vcl-navigation *ngIf="item.items && item.items.length > 0"
-         [inputItems]="item.items"
-         [type]="type"
-         [useRouter]="useRouter"
-         [subLevelHintIconOpened]="subLevelHintIconOpened"
-         [subLevelHintIconClosed]="subLevelHintIconClosed"
-         [subLevelHintIconSide]="subLevelHintIconSide"
-         (select)="onSubItemSelect($event)">
-    </nav>
-  </li>
-</ul>
+<ng-content></ng-content>
