--- a/lib/ng-vcl/src/password-input/password-input.component.html
+++ b/lib/ng-vcl/src/password-input/password-input.component.html
@@ -1,5 +1,6 @@
 <ng-content></ng-content>
 <button vcl-square-button
+        type="button"
         [disabled]="disabled"
         (click)="toggle()">
   <vcl-icon [icon]="visible ? 'vcl:eye' : 'vcl:eye-off'"></vcl-icon>
