--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -9,6 +9,7 @@
        >
 <button #btn
         vcl-square-button
+        type="button"
         tabindex="-1"
         [disabled]="isDisabled"
         class="vclAppended"
