--- a/lib/ng-vcl/src/token/token.component.html
+++ b/lib/ng-vcl/src/token/token.component.html
@@ -2,6 +2,7 @@
   <ng-content></ng-content>
 </span>
 <button vcl-square-button
+        type="button"
         [disabled]="isDisabled"
         *ngIf="removable" 
         class="vclTransparent"
